<resources>
    <string name="app_name">Green Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="about_us_1">
        Green Guide Inc. was founded in 2015 in Seattle, USA. With the help of Microsoft and Guiyang Municipal Government of China,
        Green Guide Inc. established the Guizhou Love Green Evaluation Service Co., Ltd. in Guiyang, China in 2016.
    </string>

    <string name="about_us_2">
        www.lovegreenguide.com was officially launched in China for public use in January 2017.
    </string>

    <string name="about_us_3">
        Guizhou Love Green Evaluation Internet Service Co., Ltd. is committed to the application of information
        technology to practice the green supply chain. Promoting participation, sharing and integration of environmental
        messages by all citizens has become an aid to the improvement of the environment.
    </string>
    <string name="histogram_description">Sideways Histogram</string>
    <string name="Rating_Stars_Description">Displays similar content to a RatingBar</string>
    <string name="explore_button_text">Explore Reviews</string>
    <string name="write_review_button_text">Write a Review</string>
    <string name="write_first_review_button_text">Write the First Review</string>
    <string name="btmsheet_company_name_default">Company Name</string>
    <string name="btmsheet_rating_value_default">+3.0</string>
    <string name="btmsheet_ratings_count_default">(134)</string>
    <string name="poi_results_retry">Retry</string>
    <string name="list_item_other">Other</string>

    <string name="title_activity_view_one_review">ViewOneReview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="log_in_text">Log In</string>
    <string name="log_out_text">Log Out</string>

    <string name="preference_file_credentials">preference_file_user_credentials</string>
    <string name="preference_credentials_token">token</string>
    <string name="preference_credentials_user_name">username</string>

</resources>
