<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/btmSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bottom_sheet_blue"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/reviews_bottom_sheet_peek_height"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:minHeight="@dimen/reviews_bottom_sheet_peek_height"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/previewCompanyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:minHeight="@dimen/reviews_bottom_sheet_peek_height_halved"
                    android:overScrollMode="ifContentScrolls"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:text="@string/btmsheet_company_name_default"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reviews_bottom_sheet_peek_height_halved"
                    android:minHeight="@dimen/reviews_bottom_sheet_peek_height_halved"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btmSheetRatingValue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:text="@string/btmsheet_rating_value_default"/>

                    <ImageView
                        android:id="@+id/btmSheetRatingStars"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/Rating_Stars_Description"
                        android:layout_weight="7"
                        android:scaleType="center"/>

                    <TextView
                        android:id="@+id/btmSheetRatingsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:text="@string/btmsheet_ratings_count_default"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/btmSheetAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/bottom_sheet_text" />

            <TextView
                android:id="@+id/btmSheetCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_sheet_text" />

            <TextView
                android:id="@+id/btmSheetIndustry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_sheet_text" />

            <TextView
                android:id="@+id/btmSheetProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="@color/bottom_sheet_text" />

            <ImageView
                android:id="@+id/btmSheetHistogram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/histogram_description"
                android:scaleType="center" />

            <LinearLayout
                android:id="@+id/userReviewList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"/>

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</merge>